@@ -208,21 +208,13 @@ require_once('include/httptest.inc.php');
 			return false;
 		}
 
-		if ($useipmi == 'yes')
-		{
-			if ($useip)
-				$dns = $ipmi_ip;
-			else
-				$ip = $ipmi_ip;
-		}
-
 		if(is_null($hostid)){
 			$hostid = get_dbid('hosts','hostid');
 			$result = DBexecute('INSERT INTO hosts '.
-				' (hostid,proxy_hostid,host,port,status,useip,dns,ip,disable_until,available,useipmi,ipmi_port,ipmi_authtype,ipmi_privilege,ipmi_username,ipmi_password) '.
+				' (hostid,proxy_hostid,host,port,status,useip,dns,ip,disable_until,available,useipmi,ipmi_port,ipmi_authtype,ipmi_privilege,ipmi_username,ipmi_password,ipmi_ip) '.
 				' VALUES ('.$hostid.','.$proxy_hostid.','.zbx_dbstr($host).','.$port.','.$status.','.$useip.','.zbx_dbstr($dns).','.zbx_dbstr($ip).',0,'
 					.HOST_AVAILABLE_UNKNOWN.','.($useipmi == 'yes' ? 1 : 0).','.$ipmi_port.','.$ipmi_authtype.','.$ipmi_privilege.','.zbx_dbstr($ipmi_username).','
-					.zbx_dbstr($ipmi_password).')');
+					.zbx_dbstr($ipmi_password).','.zbx_dbstr($ipmi_ip).')');
 			if ($result)
 			{
 				add_audit_ext(AUDIT_ACTION_ADD, AUDIT_RESOURCE_HOST, $hostid, $host, 'hosts', NULL, NULL);
@@ -247,6 +239,7 @@ require_once('include/httptest.inc.php');
 							',ipmi_privilege='.$ipmi_privilege.
 							',ipmi_username='.zbx_dbstr($ipmi_username).
 							',ipmi_password='.zbx_dbstr($ipmi_password).
+							',ipmi_ip='.zbx_dbstr($ipmi_ip).
 				' WHERE hostid='.$hostid);
 
 			if ($result)
